k8s/10_dc_leapyear.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: leapyear-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    app: leapyear-api
    deploymentconfig: leapyear-api
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: leapyear-api
        deploymentconfig: leapyear-api
    spec:
      containers:
#      - image: image-registry.openshift-image-registry.svc:5000/fae-pipeline/os-sample-flask-leapyear:latest
      - image: os-sample-flask-leapyear:latest
        imagePullPolicy: Always
        name: leapyear-api
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
