k8s/20_service_leapyear.yml
apiVersion: v1
kind: Service
metadata:
  name: os-sample-flask-leapyear
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: os-sample-flask-leapyear
    deploymentconfig: os-sample-flask-leapyear
  sessionAffinity: None
  type: ClusterIP
