k8s/30_route_leapyear.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: leapyear-api
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: leapyear-api
    weight: 100
  wildcardPolicy: None
